update security config for api fe